--- a/site.yml
+++ b/site.yml
@@ -11,6 +11,10 @@
     - apt: pkg=vim state=present
     - apt: pkg=htop state=present
     - apt: pkg=build-essential state=present
+    - apt: pkg=autoconf state=present
+    - apt: pkg=libtool state=present
+    - apt: pkg=bison state=present
+    - apt: pkg=flex state=present
 
     - modprobe: name=ipv6 state=present
     - lineinfile: dest=/etc/modules line=ipv6 state=present
@@ -18,14 +22,16 @@
     - hostname: name="{{ hostname }}"
     - lineinfile: dest=/etc/hosts regexp='^127\.0\.1\.1' line="127.0.1.1 {{ hostname }}"
 
-    - get_url: url=http://nodejs.org/dist/v0.11.10/node-v0.11.10-linux-arm-pi.tar.gz dest=/opt/
-    - command: tar -x -C /opt/ -f /opt/node-v0.11.10-linux-arm-pi.tar.gz creates=/opt/node-v0.11.10-linux-arm-pi/
-    - shell: cp -R /opt/node-v0.11.10-linux-arm-pi/*/ /usr/local/ creates=/usr/local/bin/node
+    - get_url: url=http://nodejs.org/dist/v0.10.24/node-v0.10.24-linux-arm-pi.tar.gz dest=/opt/
+    - shell: tar -x -C /opt/ -f /opt/node-v0.10.24-linux-arm-pi.tar.gz && rm /usr/local/bin/node creates=/opt/node-v0.10.24-linux-arm-pi/
+    - shell: cp -R /opt/node-v0.10.24-linux-arm-pi/*/ /usr/local/ creates=/usr/local/bin/node
 
     - git: repo=https://github.com/voltz/nacl4raspi.git dest=/opt/nacl4raspi/ update=no
     - command: ./install.sh chdir=/opt/nacl4raspi/ creates=/usr/include/nacl/
 
+    - git: repo=https://github.com/stedolan/jq.git dest=/opt/jq/ update=no
+    - shell: autoreconf -i && ./configure && make && make install chdir=/opt/jq/ creates=/usr/local/bin/jq
+
     - git: repo=https://github.com/cjdelisle/cjdns.git dest=/opt/cjdns/ update=no
     - command: ./do chdir=/opt/cjdns/ creates=/opt/cjdns/cjdroute
-    - shell: ./cjdroute --genconf > ./cjdroute.conf chdir=/opt/cjdns/ creates=/opt/cjdns/cjdroute.conf
-    # - lineinfile: desc=/opt/cjdns/cjdroute.conf line=
+    - shell: ./cjdroute --genconf | ./cjdroute --cleanconf | jq '.interfaces.ETHInterface = [{"bind":"eth0","beacon":2,"connectTo":{}}]' > cjdroute.conf chdir=/opt/cjdns/ creates=/opt/cjdns/cjdroute.conf
