--- a/site.yml
+++ b/site.yml
@@ -19,9 +19,16 @@
 
     - command: apt-get install -y python-apt creates=/usr/lib/pyshared/python2.7/apt_pkg.so
     - command: apt-get install -y python-keyczar creates=/usr/share/pyshared/keyczar/keyczar.py
+    - apt: pkg=python-pycurl state=present
+
+    - apt_repository: repo="deb http://mirrordirector.raspbian.org/raspbian/ wheezy main contrib non-free rpi" state=absent
+    - lineinfile: dest=/etc/apt/sources.list create=yes line="deb http://mirror.netcologne.de/raspbian/raspbian/ wheezy main contrib non-free rpi"
+      notify: update apt sources
 
     - apt: pkg=vim state=present
     - apt: pkg=htop state=present
+    - apt: pkg=screen state=present
+
     - apt: pkg=build-essential state=present
     - apt: pkg=autoconf state=present
     - apt: pkg=libtool state=present
@@ -58,10 +65,22 @@
     - lineinfile: dest=/etc/couchdb/local.ini regexp='^;?bind_address' line="bind_address = {{ ansible_tun0.ipv6[0].address }}"
       notify: restart couchdb
 
+    - git: repo=https://github.com/postmodern/ruby-install.git dest=/opt/ruby-install update=no
+    - shell: make && make install chdir=/opt/ruby-install creates=/usr/local/bin/ruby-install
+    - command: ruby-install ruby 2.1 creates=/opt/rubies/ruby-2.1.0/bin/ruby
+
+    - git: repo=https://github.com/postmodern/chruby.git dest=/opt/chruby update=no
+    - shell: make && make install chdir=/opt/chruby creates=/usr/local/bin/chruby-exec
+    - file: dest=/etc/profile.d/chruby.sh state=touch mode=0644
+    - lineinfile: dest=/etc/profile.d/chruby.sh create=yes line="source /usr/local/share/chruby/chruby.sh"
+    - lineinfile: dest=/etc/profile.d/chruby.sh line="chruby 2.1"
+
     # TODO announce, replicate
     # TODO make it fast
     # TODO make it pretty
 
   handlers:
+    - name: update apt sources
+      command: apt-get update
     - name: restart couchdb
       service: name=couchdb state=restarted
