--- a/tasks/cjdns.yml
+++ b/tasks/cjdns.yml
@@ -15,10 +15,10 @@
 - shell: cjdroute --genconf | cjdroute --cleanconf | jq '.interfaces.ETHInterface = [{"bind":"eth0","beacon":2,"connectTo":{}}]' > /etc/cjdroute.conf creates=/etc/cjdroute.conf
 - shell: cat /etc/cjdroute.conf | jq -r '.admin.password'
   register: cjdns_admin_password
-- template: src=cjdnsadmin dest=/root/.cjdnsadmin
+- template: src=files/cjdnsadmin dest=/root/.cjdnsadmin
 
 - command: cp /opt/cjdns/contrib/upstart/cjdns.conf /etc/init/ creates=/etc/init/cjdns.conf
 - service: name=cjdns state=started
-- copy: src=peers.sh dest=/opt/cjdns/ mode=0500
+- copy: src=files/peers.sh dest=/opt/cjdns/ mode=0500
 - file: dest=/opt/cjdns/peers.json state=touch mode=0644
 - cron: name="Dump cjdns peers" cron_file=cjdns_peers job=/opt/cjdns/peers.sh user=root
